# DIRAC-test

./: README.md  README.rst  lumache.py  pyproject.toml
docs/: run_DBit-seq_demo.ipynb
docs/source/: api.rst  conf.py  index.rst  install.rst  usage.rst
